--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         debug {
-            //storeFile file('/Users/clamp/Downloads/定位sdk/LocationDemo2/app/src/main/res/debug.keystore')
+            storeFile file('G:\\newProject\\weever.jks')
+            storePassword "czt711504**"
+            keyAlias "weever"
+            keyPassword "czt711504**"  //签名密码
         }
     }
     compileSdkVersion 25
@@ -20,10 +23,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
         debug {
-            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -40,10 +43,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/eventbus-3.0.0.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-
+    compile files('libs/baidumapapi_base_v4_2_1.jar')
+    compile files('libs/baidumapapi_map_v4_2_1.jar')
+    compile files('libs/baidumapapi_cloud_v4_2_1.jar')
 }
