--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        debug {
-            storeFile file('G:\\newProject\\weever.jks')
-            storePassword "czt711504**"
-            keyAlias "weever"
-            keyPassword "czt711504**"  //签名密码
-        }
-    }
+//    signingConfigs {
+//        debug {
+//            storeFile file('G:\\newProject\\weever.jks')
+//            storePassword "czt711504**"
+//            keyAlias "weever"
+//            keyPassword "czt711504**"  //签名密码
+//        }
+//    }
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
@@ -23,10 +23,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.debug
+            //signingConfig signingConfigs.debug
         }
         debug {
-            signingConfig signingConfigs.debug
+            //signingConfig signingConfigs.debug
         }
     }
 
