--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-//    signingConfigs {
-//        debug {
-//            storeFile file('G:\\newProject\\weever.jks')
-//            storePassword "czt711504**"
-//            keyAlias "weever"
-//            keyPassword "czt711504**"  //签名密码
-//        }
-//    }
+    signingConfigs {
+        debug {
+            storeFile file('E:\\code\\个人工程\\weever.jks')
+            storePassword "czt711504**"
+            keyAlias "weever"
+            keyPassword "czt711504**"
+        }
+    }
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "cn.people.weever"
         minSdkVersion 19
@@ -23,10 +23,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
         debug {
-            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
     }
 
