--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
-//    signingConfigs {
-//        debug {
-//            storeFile file('E:\\code\weever.jks')
-//            storePassword "czt711504**"
-//            keyAlias "weever"
-//            keyPassword "czt711504**"
-//        }
-//    }
+    signingConfigs {
+        debug {
+            storeFile file('E:\\code\\weever.jks')
+            storePassword "czt711504**"
+            keyAlias "weever"
+            keyPassword "czt711504**"
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
@@ -24,10 +24,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
         debug {
-            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -55,4 +55,6 @@ dependencies {
     compile files('libs/baidumapapi_map_v4_2_1.jar')
     compile files('libs/baidumapapi_cloud_v4_2_1.jar')
     compile 'org.greenrobot:greendao:3.2.2' // add library
+    //compile 'com.facebook.stetho:stetho:1.5.0'
+    //compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 }
