--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,8 +182,9 @@
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" android:exported="false"/>
 
         <!-- User defined.  For test only  用户自定义的广播接收器-->
+
         <receiver
-            android:name="com.example.jpushdemo.MyReceiver"
+            android:name="cn.people.weever.jpush.MyReceiver"
             android:exported="false"
             android:enabled="true">
             <intent-filter>
