--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,9 @@
             android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar">
-
+        <activity
+                android:name=".activity.car.TrackQueryActivity"
+                android:screenOrientation="portrait"/>
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN"/> -->
             <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
