--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/eventbus-3.0.0.jar')
     compile files('libs/baidumapapi_base_v4_2_1.jar')
@@ -50,6 +51,7 @@ dependencies {
     compile files('libs/baidumapapi_cloud_v4_2_1.jar')
     // add library
     //compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    compile files('libs/bos-android-sdk-1.0.2.jar')
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
@@ -58,5 +60,4 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile files('libs/bos-android-sdk-1.0.2.jar')
 }
