--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,12 @@ dependencies {
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.tencent.bugly:crashreport:2.6.5'
     compile 'com.android.support:support-v4:25.3.1'
+
+    compile 'net.sourceforge.streamsupport:streamsupport:1.5.6'
+    compile 'net.sourceforge.streamsupport:streamsupport-cfuture:1.5.6'
+    compile 'net.sourceforge.streamsupport:streamsupport-atomic:1.5.6'
+    compile 'net.sourceforge.streamsupport:streamsupport-flow:1.5.6'
+    compile 'net.sourceforge.streamsupport:streamsupport-literal:1.5.6'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
